--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 30 21:43:51 EET 2017
-sdk.dir=C\:\\Users\\Vesp\\AppData\\Local\\Android\\Sdk
+#Tue Oct 31 19:36:47 MSK 2017
+sdk.dir=/home/tim/Android/Sdk
