--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Oct 31 22:58:28 EET 2017
-sdk.dir=C\:\\Users\\Vesp\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/tim/Android/Sdk
